# ros_robot

ankbot/ankbot_bringup/: CMakeLists.txt  package.xml
ankbot/ankbot_bringup/launch/: ankbot.launch  ankbot_lidar.launch  ankbot_remote.launch  ankbot_rosserial.launch
ankbot/ankbot_bringup/launch/includes/: description.launch.xml
ankbot/ankbot_bringup/src/: robot_diagnostics.cpp
ankbot/ankbot_description/: CMakeLists.txt  package.xml
ankbot/ankbot_description/meshes/: wheel_left.dae  wheel_right.dae
ankbot/ankbot_description/urdf/: ankbot.gazebo.xacro  ankbot.urdf.xacro
ankbot/ankbot_msgs/: CMakeLists.txt  package.xml
ankbot/ankbot_navigation/: CMakeLists.txt  package.xml
ankbot/ankbot_navigation/launch/: amcl.launch  ankbot_navigation.launch  move_base.launch  move_base_test.launch
ankbot/ankbot_navigation/maps/: map.pgm  map.yaml
ankbot/ankbot_navigation/param_test/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ankbot/ankbot_navigation/rviz/: ankbot_navigation.rviz
ankbot/ankbot_simulations/ankbot_gazebo/: CMakeLists.txt  package.xml
ankbot/ankbot_simulations/ankbot_gazebo/launch/: ankbot_house.launch  ankbot_world.launch
ankbot/ankbot_simulations/ankbot_gazebo/models/ankbot/: model.config  model.sdf
ankbot/ankbot_simulations/ankbot_gazebo/rviz/: ankbot_gazebo_model.rviz
ankbot/ankbot_simulations/ankbot_gazebo/src/: robot_drive.cpp
ankbot/ankbot_slam/: CMakeLists.txt  package.xml
ankbot/ankbot_slam/config/: ankbot_lds_2d.lua
ankbot/ankbot_slam/launch/: ankbot_gmapping.launch  ankbot_slam.launch
ankbot/ankbot_slam/rviz/: ankbot_gmapping.rviz  ankbot_hector.rviz
ankbot/ankbot_slam/src/: flat_world_imu_node.cpp
